Moved resources to res/.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="./icon_256x256.png" alt=""><br>
+            <img src="./res/icon_256x256.png" alt=""><br>
             Kickstarter
             <div id="subtitle">
                 A small Mac app that will boost your productivity.
@@ -20,7 +20,8 @@
              </div>
              <div>
                  <h1 id="solution"><a href="#solution">The Solution</a></h1>
-                 This is an extremely repetitive process, which means it can be automated, and that's what Kickstarter does. Launch apps once, capture a 'setup' with Kickstarter, and launch that setup whenever you need to start working. You can even run shell commands with the shell of your choice.
+                 This is an extremely repetitive process, which means it can be automated, and that's what Kickstarter does. Launch apps once, capture a 'setup' with Kickstarter, and launch that setup whenever you need to start working. You can even run shell commands with the shell of your choice. 
+                 <img src="./res/capture-setup.png" alt="">
              </div>
         </div>
     </body>
