--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Kickstarter</title>
-        <link rel="stylesheet" href="./style.css" type="text/css" media="screen" />
-    </head>
-    <body>
-        <header>
-            <img src="./res/icon_256x256.png" alt=""><br>
-            Kickstarter
-            <div id="subtitle">
-                A small Mac app that will boost your productivity.
-            </div>
-        </header>
-        <div id="content">
-            <div>
-                <h1 id="problem"><a href="#problem">The Problem</a></h1>
-                So you need to start working. Maybe you're a web developer. You launch a browser, launch your terminal emulator, and launch an editor. And when you need to start working again, you do this all over again. And it gets tedious.
-             </div>
-             <div>
-                 <h1 id="solution"><a href="#solution">The Solution</a></h1>
-                 This is an extremely repetitive process, which means it can be automated, and that's what Kickstarter does. Launch apps once, capture a 'setup' with Kickstarter, and launch that setup whenever you need to start working. You can even run shell commands with the shell of your choice.
-                 <img src="./res/capture-setup.png" alt="">
-             </div>
+  <head>
+    <title>Kickstarter</title>
+    <link rel="stylesheet" href="./style.css" type="text/css" media="screen" />
+  </head>
+  <body>
+    <header>
+      <img src="./res/icon_256x256.png"><br>
+      Kickstarter
+      <div id="subtitle">
+        A small Mac app that will boost your productivity.
+      </div>
+    </header>
+    <div id="content">
+      <div>
+        <h1 id="problem"><a href="#problem">The Problem</a></h1>
+        So you need to start working. Maybe you're a web developer. You launch a browser, launch your terminal emulator, and launch an editor. And when you need to start working again, you do this all over again. And it gets tedious.
+      </div>
+      <div>
+        <h1 id="solution"><a href="#solution">The Solution</a></h1>
+        This is an extremely repetitive process, which means it can be automated, and that's what Kickstarter does. Launch apps once, capture a 'setup' with Kickstarter, and launch that setup whenever you need to start working. You can even run shell commands with the shell of your choice.
+        <img src="./res/capture-setup.png">
+      </div>
+      <div>
+        <h1 id="managing"><a href="#managing">Managing Setups</a></h1>
+        Managing setups is as easy as creating them. Select the 'Manage Setups' menu item from the Kickstarter menu, and you'll see a window.
+        <img src="./res/manage-setups.png"><br>
+        Click on the '+' button at the bottom-left corner to capture a new setup. Click on the '-' button next to the '+' button to delete the currently selected setup. Click on 'Launch Setup' to launch the selected setup, 'Edit Setup' to edit it.
+      </div>
+      <div>
+        <h1 id="editing"><a href="#editing">Editing A Setup</a></h1>
+        When you click on the 'Edit Setup' button on the 'Manage Setups' window, you should see a window titled 'Edit Setup'.
+        <img src="./res/edit-setup.png"><br>
+        From here, you can choose what apps to launch (use the '+' and '-' buttons to add/remove). You can select a shell, and type in some simple shell commands to run. When you want to save your shell script options, click on 'Save'.
+        <div class="alert">
+          Shell scripts that you run from here won't run in a new Terminal window. Instead, they run in the background. So, if you want to do something like start a new Terminal window and run <code>vim</code> in it, do 
+          <pre>open -a Terminal /path/to/vim</pre> which works for pretty much everything else as well.
         </div>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
