Add a download button, and a download.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <div id="subtitle">
         A small Mac app that will boost your productivity.
       </div>
+      <div id="download">
+        <a class="download" href="./res/downloads/Kickstarter-1.0.0.zip">Download Kickstarter-1.0.0.zip</a>
+      </div>
     </header>
     <div id="content">
       <div>
@@ -39,6 +42,7 @@
           <pre>open -a Terminal /path/to/vim</pre> which works for pretty much everything else as well.
         </div>
       </div>
+      <div><h3><a href="#download">Scroll up to download</a></h3></div>
     </div>
   </body>
 </html>
