Specify that setups can be launched from the menu.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         Managing setups is as easy as creating them. Select the 'Manage Setups' menu item from the Kickstarter menu, and you'll see a window.
         <img src="./res/manage-setups.png"><br>
         Click on the '+' button at the bottom-left corner to capture a new setup. Click on the '-' button next to the '+' button to delete the currently selected setup. Click on 'Launch Setup' to launch the selected setup, 'Edit Setup' to edit it.
+        <div class="alert">
+          You can also launch setups from the Kickstarter menu. Launch a setup with <em>Setups &gt; setup-name</em>.
+        </div>
       </div>
       <div>
         <h1 id="editing"><a href="#editing">Editing A Setup</a></h1>
