Add some line breaks, and a margin.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div>
         <h1 id="solution"><a href="#solution">The Solution</a></h1>
         This is an extremely repetitive process, which means it can be automated, and that's what Kickstarter does. Launch apps once, capture a 'setup' with Kickstarter, and launch that setup whenever you need to start working. You can even run shell commands with the shell of your choice.
-        <img src="./res/capture-setup.png">
+        <br><img src="./res/capture-setup.png">
       </div>
       <div>
         <h1 id="managing"><a href="#managing">Managing Setups</a></h1>
         Managing setups is as easy as creating them. Select the 'Manage Setups' menu item from the Kickstarter menu, and you'll see a window.
-        <img src="./res/manage-setups.png"><br>
+        <br><img src="./res/manage-setups.png"><br>
         Click on the '+' button at the bottom-left corner to capture a new setup. Click on the '-' button next to the '+' button to delete the currently selected setup. Click on 'Launch Setup' to launch the selected setup, 'Edit Setup' to edit it.
         <div class="alert">
           You can also launch setups from the Kickstarter menu. Launch a setup with <em>Setups &gt; setup-name</em>.
@@ -38,7 +38,7 @@
       <div>
         <h1 id="editing"><a href="#editing">Editing A Setup</a></h1>
         When you click on the 'Edit Setup' button on the 'Manage Setups' window, you should see a window titled 'Edit Setup'.
-        <img src="./res/edit-setup.png"><br>
+        <br><img src="./res/edit-setup.png"><br>
         From here, you can choose what apps to launch (use the '+' and '-' buttons to add/remove). You can select a shell, and type in some simple shell commands to run. When you want to save your shell script options, click on 'Save'.
         <div class="alert">
           Shell scripts that you run from here won't run in a new Terminal window. Instead, they run in the background. So, if you want to do something like start a new Terminal window and run <code>vim</code> in it, do 
