--- a/index.html
+++ b/index.html
@@ -47,5 +47,13 @@
       </div>
       <div><h3><a href="#download">Scroll up to download</a></h3></div>
     </div>
+    <footer>
+      <div class="halfwidth">
+        An app by <a href="http://ajaymt.github.com">AjayMT</a>.
+      </div>
+      <div class="halfwidth">
+        See it on <a href="http://github.com/ajaymt/kickstarter">GitHub</a>.
+      </div>
+    </footer>
   </body>
 </html>
