Update Kickstarter, and make some changes in 'updates/'.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         A small Mac app that will boost your productivity.
       </div>
       <div id="download">
-        <a class="download" href="./downloads/Kickstarter-1.2.zip">Download Kickstarter-1.2.zip</a>
+        <a class="download" href="./downloads/Kickstarter-1.5.zip">Download Kickstarter-1.5.zip</a>
       </div>
     </header>
     <div id="content">
@@ -44,6 +44,12 @@
           Shell scripts that you run from here won't run in a new Terminal window. Instead, they run in the background. So, if you want to do something like start a new Terminal window and run <code>vim</code> in it, do 
           <pre>open -a Terminal /path/to/vim</pre> which works for pretty much everything else as well.
         </div>
+      </div>
+      <div>
+        <h1 id="panel"><a href="#panel">Using The Kickstarter Panel</a></h1>
+        The Kickstarter Panel is a keyboard launcher that launches your Kickstarter setups.
+        <br><br><img src="./res/kickstarter-panel.png"><br><br>
+        You can display the Kickstarter Panel with a global hotkey that can be changed in Kickstarter's preferences. You can also enable fuzzy searching, which allows you to skip intermediate characters while searching for setups (for example, 'eac' will match 'Emacs').
       </div>
       <div><h3><a href="#download">Scroll up to download</a></h3></div>
     </div>
