--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         A small Mac app that will boost your productivity.
       </div>
       <div id="download">
-        <a class="download" href="./downloads/Kickstarter-1.5.zip">Download Kickstarter-1.5.zip</a>
+        <a class="download" href="./downloads/Kickstarter-1.6.zip">Download Kickstarter-1.6.zip</a>
       </div>
     </header>
     <div id="content">
@@ -43,6 +43,8 @@
         <div class="alert">
           Shell scripts that you run from here won't run in a new Terminal window. Instead, they run in the background. So, if you want to do something like start a new Terminal window and run <code>vim</code> in it, do 
           <pre>open -a Terminal /path/to/vim</pre> which works for pretty much everything else as well.
+          <br /><br />
+          You can also tell Kickstarter to run shell scripts in a new Terminal window by changing Kickstarter's preferences.
         </div>
       </div>
       <div>
