--- a/updates/changelog.html
+++ b/updates/changelog.html
@@ -6,6 +6,15 @@
   </head>
   <body>
     <div class="update">
+      <h2>Version 1.6 (1 new feature; 2 improvements)</h2>
+      <ul>
+        <li>The ability to run shell scripts in a terminal window.</li>
+        <li>UI improvements to the Kickstarter Panel.</li>
+        <li>Minor UI changes in the 'Edit Setup' window.</li>
+      </ul>
+    </div>
+    
+    <div class="update">
       <h2>Version 1.5 (1 new feature; 2 improvements)</h2>
       <ul>
         <li>All new Kickstarter Panel, 
