--- a/updates/changelog.html
+++ b/updates/changelog.html
@@ -6,6 +6,13 @@
   </head>
   <body>
     <div class="update">
+      <h2>Version 1.6.1 (1 improvement)</h2>
+      <ul>
+        <li>Proper Mavericks support.</li>
+      </ul>
+    </div>
+    
+    <div class="update">
       <h2>Version 1.6 (1 new feature; 2 improvements)</h2>
       <ul>
         <li>The ability to run shell scripts in a terminal window.</li>
