--- a/updates/changelog.html
+++ b/updates/changelog.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <div class="update">
+      <h2>Version 1.6.5 (1 new feature; 1 improvement)</h2>
+      <ul>
+        <li>You can now set the directory in which the Setup file is stored.</li>
+        <li>Minor UI changes.</li>
+      </ul>
+    </div>
+    
+    <div class="update">
       <h2>Version 1.6.2 (1 bug fix)</h2>
       <ul>
         <li>Fix a bug with the table view in the 'Manage Setups' window.</li>
