--- a/updates/changelog.html
+++ b/updates/changelog.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>Kickstarter - Changelog</title>
     <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="update">
+      <h2>Version 1.6.6 (1 bug fix)</h2>
+      <ul>
+        <li>Fix the position of the Kickstarter Panel.</li>
+      </ul>
+    </div>
+    
     <div class="update">
       <h2>Version 1.6.5 (1 new feature; 1 improvement)</h2>
       <ul>
