--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         An app by <a href="http://ajaymt.github.com">AjayMT</a>.
       </div>
       <div class="halfwidth">
-        See it on <a href="http://github.com/ajaymt/kickstarter">GitHub</a>.
+        Fork it on <a href="http://github.com/ajaymt/kickstarter">GitHub</a>.
       </div>
     </footer>
     
